--- a/index.html
+++ b/index.html
@@ -3,9 +3,90 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
-    My name is Harsh!
+    <section>
+        <nav>
+            <img src="./assets/FES.svg" class="logo" alt="">
+            <ul>
+                <li> <a href="#about">About</a> </li>
+                <li> <a href="#discord">Discord</a> </li>
+                <li> <a href="#contact">Contact</a> </li>
+            </ul>
+        </nav>
+        <header>
+            <div class="row">
+                <div>
+                    <h1> Best place to learn frontend</h1>
+                    <p class="subheader"> Go from being an absolute beginner to pro with a simplified process</p>
+                    <button>Start now</button>
+                </div>
+                <figure>
+                    <img src="./assets/laptop.png" alt="Home page image">
+                </figure>
+            </div>
+        </header>
+    </section>
+    <main>
+        <section id="about">
+            <h2>About</h2>
+            <div class="row">
+                <div class="section__description">
+                    <div class="section__description--wrapper">
+                        <p class="section__description--para">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores repellat id modi recusandae 
+                            ratione culpa veritatis veniam officia ad. Corporis, similique labore ratione eos eveniet 
+                            excepturi in accusantium! Sed, atque!
+                        </p>
+                        <p class="section__description--para">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores repellat id modi recusandae 
+                            ratione culpa veritatis veniam officia ad. Corporis, similique labore ratione eos eveniet 
+                            excepturi in accusantium! Sed, atque!
+                        </p>
+                    </div>
+                    <figure class="about__img--wrapper">
+                        <img src="./assets/about.jpg" alt="">
+                    </figure>
+                </div>
+            </div>
+        </section>
+
+        <section id="discord">
+            <h2>Discord</h2>
+            <div class="row">
+                <div class="section__description">
+                    <figure class="about__img--wrapper">
+                        <img src="./assets/discord.png" alt="Discord">
+                    </figure>
+                    <div class="section__description--wrapper">
+                        <p class="section__description--para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus mollitia, consectetur deleniti voluptas aperiam voluptate corporis beatae ab repellat corrupti dolorum doloremque fuga autem consequuntur sint reprehenderit aspernatur veniam dicta!</p>
+                        <p class="section__description--para">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt architecto, magni odio velit ad porro vel esse illo vero ea pariatur! Modi ipsam odit ullam beatae, quaerat quisquam dolores ab.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="contact">
+            <form action="">
+                <label>Email</label>
+                <input type="email" placeholder="jane@exmaple.com">
+                <label>Message</label>
+                <textarea type="text" placeholder="Cool website, lets get connected!"></textarea>
+                <button>Contact Us!</button>
+            </form>
+        </section>
+    </main>
+    <footer>
+        <img class="footer__logo" src="./assets/FES.svg" alt="">
+        <div class="footer__links">
+            <a href="#about">About</a>
+            <a href="#discord">Discord</a>
+            <a href="#contact">Contact</a>
+            <a href="">Courses</a>
+        </div>
+        <p>Copyright Frontend Simplified</p>
+    </footer>
 </body>
 </html>
