--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </nav>
         <header>
             <div class="row">
-                <div>
+                <div class="home__description">
                     <h1> Best place to learn frontend</h1>
                     <p class="subheader"> Go from being an absolute beginner to pro with a simplified process</p>
                     <button>Start now</button>
@@ -74,17 +74,17 @@
                 <input type="email" placeholder="jane@exmaple.com">
                 <label>Message</label>
                 <textarea type="text" placeholder="Cool website, lets get connected!"></textarea>
-                <button>Contact Us!</button>
+                <button class="home__description--button">Contact Us!</button>
             </form>
         </section>
     </main>
     <footer>
         <img class="footer__logo" src="./assets/FES.svg" alt="">
         <div class="footer__links">
-            <a href="#about">About</a>
-            <a href="#discord">Discord</a>
-            <a href="#contact">Contact</a>
-            <a href="">Courses</a>
+            <a class="footer__link" href="#about">About</a>
+            <a class="footer__link" href="#discord">Discord</a>
+            <a  class="footer__link" href="#contact">Contact</a>
+            <a  class="footer__link" href="">Courses</a>
         </div>
         <p>Copyright Frontend Simplified</p>
     </footer>
